# hilavitkutin

./: .gitignore  EXTENSIONS_RESEARCH.md  README.md  TODO.md
mock/: Cargo.toml  DESIGN.md.tmpl  PRINCIPLES.md.tmpl  WORKFLOW.md.tmpl  mockspace.toml
mock/agent/: MAIN.md.tmpl  POSTAMBLE.md.tmpl  PREAMBLE.md.tmpl  config.toml  copilot-hooks.json
mock/agent/hooks/: no-alloc-guard.sh.tmpl  no-bare-primitive-guard.sh.tmpl  no-dyn-guard.sh.tmpl  no-runtime-registration-guard.sh.tmpl  no-runtime-spawn-guard.sh.tmpl  no-std-guard.sh.tmpl  vocabulary-reminder.sh.tmpl
mock/agent/rules/: cargo.md.tmpl  cookbook.md.tmpl  implementation.md.tmpl  no-heap.md.tmpl  type-surface.md.tmpl  writing-style.md.tmpl
mock/benches/: .gitignore  Cargo.toml  NIGHT_FINDINGS_2026-05-11.md  README.md  atomic_inc_strategy_n1024.csv  atomic_inc_strategy_n1024.meta.json  atomic_inc_strategy_n1024_findings.md  atomic_inc_strategy_n16384.csv  atomic_inc_strategy_n16384.meta.json  atomic_inc_strategy_n16384_findings.md  atomic_inc_strategy_n256.csv  atomic_inc_strategy_n256.meta.json  atomic_inc_strategy_n256_findings.md  atomic_inc_strategy_n4096.csv  atomic_inc_strategy_n4096.meta.json  atomic_inc_strategy_n4096_findings.md  atomic_ordering_cost_n1024.csv  atomic_ordering_cost_n1024.meta.json  atomic_ordering_cost_n1024_findings.md  atomic_ordering_cost_n16384.csv  atomic_ordering_cost_n16384.meta.json  atomic_ordering_cost_n16384_findings.md  atomic_ordering_cost_n256.csv  atomic_ordering_cost_n256.meta.json  atomic_ordering_cost_n256_findings.md  atomic_ordering_cost_n4096.csv  atomic_ordering_cost_n4096.meta.json  atomic_ordering_cost_n4096_findings.md  atomic_ordering_cost_n64.csv  atomic_ordering_cost_n64.meta.json  atomic_ordering_cost_n64_findings.md  atomic_vs_plain_n1024.csv  atomic_vs_plain_n1024.meta.json  atomic_vs_plain_n1024_findings.md  atomic_vs_plain_n16384.csv  atomic_vs_plain_n16384.meta.json  atomic_vs_plain_n16384_findings.md  atomic_vs_plain_n256.csv  atomic_vs_plain_n256.meta.json  atomic_vs_plain_n256_findings.md  (+345 more)
mock/benches/src/: main.rs
mock/crates/hilavitkutin/: BACKLOG.md.tmpl  Cargo.toml  DESIGN.md.tmpl  README.md.tmpl
mock/crates/hilavitkutin-api/: BACKLOG.md.tmpl  Cargo.toml  DESIGN.md.tmpl  README.md.tmpl  SHAME.md.tmpl
mock/crates/hilavitkutin-build/: BACKLOG.md.tmpl  Cargo.toml  DESIGN.md.tmpl  README.md.tmpl
mock/crates/hilavitkutin-ctx/: BACKLOG.md.tmpl  Cargo.toml  DESIGN.md.tmpl  README.md.tmpl
mock/crates/hilavitkutin-extensions/: BACKLOG.md.tmpl  Cargo.toml  DESIGN.md.tmpl  README.md.tmpl  build.rs
mock/crates/hilavitkutin-extensions-macros/: BACKLOG.md.tmpl  Cargo.toml  DESIGN.md.tmpl  README.md.tmpl
mock/crates/hilavitkutin-kit/: BACKLOG.md.tmpl  Cargo.toml  DESIGN.md.tmpl  README.md.tmpl
mock/crates/hilavitkutin-linking/: BACKLOG.md.tmpl  Cargo.toml  DESIGN.md.tmpl  README.md.tmpl
mock/crates/hilavitkutin-persistence/: BACKLOG.md.tmpl  Cargo.toml  DESIGN.md.tmpl  README.md.tmpl
mock/crates/hilavitkutin-providers/: BACKLOG.md.tmpl  Cargo.toml  DESIGN.md.tmpl  README.md.tmpl  SHAME.md.tmpl
mock/crates/hilavitkutin-str/: BACKLOG.md.tmpl  Cargo.toml  DESIGN.md.tmpl  README.md.tmpl
mock/design_rounds/: 202603131230_topic.build-configuration-and-cfg-gating.md  202603141800_research.loimu-dag.md  202603141800_research.loimu-scheduler.md  202603151200_topic.hilavitkutin-api-surface.md  202604200950_topic.hilavitkutin-sweep-primitive-vocabulary.md  202604200955_changelist.doc.md  202604201048_changelist.src.lock.md  202604201048_topic.sink-collector-codec-contracts.md  202604240745_changelist.doc.md  202604240831_changelist.doc.lock.md  202604241222_changelist.doc.md  202604241222_changelist.src.md  202604241222_topic.maybenull-fn-at-descriptor-boundary.md  202604241317_changelist.doc.md  202604241317_changelist.src.lock.md  202604241317_topic.severity-ramp-up.md  202604260700_changelist.doc.md  202604260900_changelist.doc.md  202604261100_changelist.doc.lock.md  202604261400_changelist.src.md  202604261700_changelist.doc.md  202604261800_changelist.src.md  202604261900_changelist.doc.lock.md  202604262000_changelist.src.md  202604262700_changelist.doc.md  202604262800_changelist.src.lock.md  202604263200_changelist.src.lock.md  202604263300_changelist.doc.md  202604263400_changelist.src.lock.md  202604263500_changelist.doc.lock.md  202604263600_changelist.src.md  202604263700_changelist.doc.md  202604263800_changelist.src.lock.md  202604264000_changelist.src.md  202604264400_changelist.src.md  202604264700_changelist.doc.lock.md  202604264800_changelist.src.md  202604290000_changelist.doc.md  202604290000_changelist.src.md  202604291932_changelist.doc.md  (+67 more)
mock/design_rounds/202603231200-abandoned/: 202603231200_changelist.doc.deprecated.md
mock/design_rounds/202603241500-abandoned/: 202603241500_changelist.doc.deprecated.md
mock/design_rounds/202604200054-abandoned/: 202604200054_changelist.doc.deprecated.md  202604200054_changelist.src.deprecated.md
mock/design_rounds/202604200055/: 202603131500_research.per-crate-backends-and-domain-optimizers.md  202603141800_research.loimu-storage.md  202603141800_research.loimu-synthesis.md  202603141800_research.loisto-scheduler.md  202603141800_research.morsel-pipeline-execution.md  202603141800_research.scheduler-algorithm-deep-dive.md  202603141800_research.workunit-trait-deep-dive.md  202603181200_topic.hilavitkutin-design-consolidation.md  202604200055_changelist.doc.lock.md  202604200055_changelist.src.lock.md
mock/design_rounds/202604200117/: .history  202604200117_changelist.doc.lock.md  (+1 more)
mock/lints/: no_alloc_enforcer.rs  no_dynamic_dispatch.rs  no_runtime_registration.rs  no_runtime_spawn.rs  no_std_enforcer.rs  vocabulary_discipline.rs
mock/research/: 2026_05_05_doc_audit.md  2026_05_05_doc_audit_entrypoints.md  2026_05_11_concurrency_audit_round_202605101036.md  EXTENSIONS_RESEARCH.md  README.md  hilavitkutin-api-history.md  hilavitkutin-build-design-audit.md  hilavitkutin-build-history.md  hilavitkutin-history.md  marker_trait_attr_bitset_fallback.md  next-solver-verification.md
(+900 files in other folders)
