[workspace]

[package]
name = "benches"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "benches"
path = "src/main.rs"

[dependencies]
mockspace-bench-core = { git = "https://github.com/hiisi-digital/mockspace", branch = "dev", features = ["std"] }
mockspace-bench-harness = { git = "https://github.com/hiisi-digital/mockspace", branch = "dev" }
mockspace-bench-macro = { git = "https://github.com/hiisi-digital/mockspace", branch = "dev" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
