[package]
name = "hilavitkutin-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WorkUnit + provider trait surface for the hilavitkutin pipeline engine"
repository.workspace = true

[dependencies]
arvo.workspace = true
arvo-bitmask.workspace = true
hilavitkutin-ctx.workspace = true
notko.workspace = true

[build-dependencies]
mockspace.workspace = true

[features]
default = []
