[package]
name = "hilavitkutin-extensions"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Contract-bound host orchestration over hilavitkutin-linking"
repository.workspace = true

[dependencies]
hilavitkutin-linking.workspace = true
notko.workspace = true
arvo.workspace = true

[build-dependencies]
mockspace.workspace = true

[features]
default = []
