[package]
name = "hilavitkutin-linking"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cross-platform dynamic library loading primitive for the hilavitkutin extension stack"
repository.workspace = true

[dependencies]
notko.workspace = true
arvo.workspace = true
arvo-bits.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", default-features = false, features = ["Win32_System_LibraryLoader", "Win32_Foundation"] }

[build-dependencies]
mockspace.workspace = true

[features]
default = []
