[package]
name = "hilavitkutin-persistence"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hilavitkutin-str.workspace = true
hilavitkutin-api.workspace = true
# rkyv pulled in by follow-up round; skeleton ships without it.

[build-dependencies]
mockspace.workspace = true

[features]
default = []
