[package]
name = "hilavitkutin-persistence"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Zero-copy persistence for hilavitkutin pipeline state"
repository.workspace = true

[dependencies]
hilavitkutin-str.workspace = true
hilavitkutin-api.workspace = true
# rkyv pulled in by follow-up round; skeleton ships without it.

[dev-dependencies]
# arvo for USize / Bool newtypes used by test-local MemoryProviderApi
# stubs. Library code stays dep-free of arvo.
arvo.workspace = true

[build-dependencies]
mockspace.workspace = true

[features]
default = []
