[package]
name = "hilavitkutin-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Default Resource-backed providers for the hilavitkutin scheduler"
repository.workspace = true

[dependencies]
notko.workspace = true
arvo.workspace = true
arvo-bits.workspace = true
hilavitkutin-api.workspace = true
hilavitkutin-str.workspace = true
