[package]
name = "hilavitkutin-str"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Interned string handle + arena + linker-section const table"
repository.workspace = true

[dependencies]
arvo.workspace = true
arvo-bits.workspace = true
arvo-refit.workspace = true
notko.workspace = true
