[workspace]

[package]
name = "ema_neon"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
name = "ema_neon"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
mockspace-bench-core = { git = "https://github.com/hiisi-digital/mockspace", branch = "dev", features = ["std"] }
mockspace-bench-macro = { git = "https://github.com/hiisi-digital/mockspace", branch = "dev" }
